ssu_score/error/20190004/12_error.txt
STD_DIR/20190004/12.c:70:1: error: expected '}'
^
STD_DIR/20190004/12.c:57:1: note: to match this '{'
{
^
1 error generated.
